--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body class="bg-slate-700">
   <h1 class="text-4xl font-bold text-white my-10 text-center">Popular Drinks</h1>
 <div class="w-3/4 border border-gray-600 m-auto p-4">
-  <div class="user-box">
+  <div class="user-box" id="user-box">
     
     <!-- <div class=" grid grid-cols-3 gap-5 mt-4">
       <div class="Cocktail-box border border-gray-300">
