--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-slate-700">
-  <h1 class="text-4xl font-bold text-white my-10 text-center">Popular Drinks</h1>
-<div class="w-3/4 border border-gray-600 m-auto p-4">
-  <div class="grid grid-cols-4 gap-5" id="user-box">
-    
-    <!-- <div class=" grid grid-cols-3 gap-5 mt-4">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-slate-700">
+    <h1 class="text-4xl font-bold text-white my-10 text-center">
+      Popular Drinks
+    </h1>
+    <div class="w-3/4 border border-gray-600 m-auto p-4">
+      <div class="grid grid-cols-4 gap-5" id="user-box">
+        <!-- <div class=" grid grid-cols-3 gap-5 mt-4">
       <div class="Cocktail-box border border-gray-300">
          <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg" alt="">
         <div class="p-3"> 
@@ -23,21 +24,41 @@
         </div>
       </div>
     </div> -->
-  </div>
-</div>
-
-
- <div class="container mx-auto text-center">
-    <h1 class="text-4xl font-bold text-white my-10">Search For Cocktail 🔍</h1>
-    <div class="bg-white w-1/2 mx-auto p-2 border rounded-xl flex justify-between gap-2">
-        <input type="text" id="input" placeholder="Ex...Cocktail" class="p-4 w-full rounded-xl border-transparent">
-        <button class="bg-green-600 hover:bg-green-500 text-white px-4 py-2 rounded" id="search">Search</button>
+      </div>
     </div>
- </div>
- <div class="container mx-auto border-gray-400 min-h-[600px] border rounded-xl mt-5 p-4">
-   <h1 class="text-gray-300 text-center text-4xl mt-16 font-semibold capitalize" id="no-found">No Cocktail To Show!</h1>
-   <div class="cocktail grid grid-cols-4 gap-5 mt-4">
-     <!-- <div class="Cocktail-box border border-gray-300">
+
+    <div class="container mx-auto text-center">
+      <h1 class="text-4xl font-bold text-white my-10">
+        Search For Cocktail 🔍
+      </h1>
+      <div
+        class="bg-white w-1/2 mx-auto p-2 border rounded-xl flex justify-between gap-2"
+      >
+        <input
+          type="text"
+          id="input"
+          placeholder="Ex...Cocktail"
+          class="p-4 w-full rounded-xl border-transparent"
+        />
+        <button
+          class="bg-green-600 hover:bg-green-500 text-white px-4 py-2 rounded"
+          id="search"
+        >
+          Search
+        </button>
+      </div>
+    </div>
+    <div
+      class="container mx-auto border-gray-400 min-h-[600px] border rounded-xl mt-5 p-4"
+    >
+      <h1
+        class="text-gray-300 text-center text-4xl mt-16 font-semibold capitalize"
+        id="no-found"
+      >
+        No Cocktail To Show!
+      </h1>
+      <div class="cocktail grid grid-cols-4 gap-5 mt-4">
+        <!-- <div class="Cocktail-box border border-gray-300">
         <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg" alt="">
        <div class="p-3"> 
         <h3 class="text-white text-[20px]">Lorem ipsum dolor</h3>
@@ -48,21 +69,45 @@
         </div>
        </div>
      </div> -->
-   </div>
- </div>
+      </div>
+    </div>
 
- <div>
-  <div  class="fixed  inset-0 flex items-center justify-center bg-gray-800 bg-opacity-50 hidden" id="details">
-    <!-- <div class="bg-white rounded-lg p-6 w-[50%] md:flex-col md:flex">
-      <img src="" alt="">
-        <h2 class="text-lg font-bold">Modal Title</h2>
-        <p class="mt-2">This is a simple modal using Tailwind CSS!</p>
-        <div class="mt-4 flex justify-start">
-            <button id="close" class="bg-red-500 text-white px-4 py-2 rounded">Close</button>
+    <div>
+      <div class="flex items-center justify-center min-h-screen">
+        <div
+          id="details"
+          class="overlay fixed top-0 left-0 w-full h-full flex items-center justify-center bg-[#0000005e] invisible"
+        >
+          <!-- <div class="popup bg-white w-170%] min-h-[500px] p-10">
+            <h2 class="text-2xl font-bold mb-4">Popup Title</h2>
+            <p class="mb-6">Popup content goes here.</p>
+            <button
+              class="px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white rounded"
+            >
+              Close
+            </button>
+          </div> -->
         </div>
-    </div> -->
-</div>
- </div>
- <script src="app.js"></script>
-</body>
+      </div>
+    </div>
+    <div>
+      <div class="flex items-center justify-center min-h-screen">
+        <div
+          id="popup"
+          class="overlay fixed top-0 left-0 w-full h-full flex items-center justify-center bg-[#0000005e] invisible"
+        >
+          <!-- <div class="popup bg-white w-170%] min-h-[500px] p-10">
+            <h2 class="text-2xl font-bold mb-4">Popup Title</h2>
+            <p class="mb-6">Popup content goes here.</p>
+            <button
+              class="px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white rounded"
+            >
+              Close
+            </button>
+          </div> -->
+        </div>
+      </div>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
